--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "Rock Paper Scissors Spock Lizard",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "backend": "npm run dev -w backend",
+    "frontend": "npm run dev -w frontend",
+    "start": "concurrently \"npm run backend\" \"npm run frontend\""
   },
   "author": "Madis Põld",
   "license": "ISC",
   "workspaces": [
     "backend",
     "frontend"
-  ]
+  ],
+  "devDependencies": {
+    "concurrently": "^8.2.2"
+  }
 }
