--- a/frontend/.env.development.local
+++ b/frontend/.env.development.local
@@ -1,1 +1,3 @@
-VITE_API_URL=https://codechallenge.boohma.com
+VITE_API_URL=http://localhost:3000
+# Without BE running replace with the following
+# VITE_API_URL=https://codechallenge.boohma.com
